--- a/src/components/Bubble/bubble.css
+++ b/src/components/Bubble/bubble.css
@@ -2,14 +2,15 @@
   position: relative;
   width: 8rem;
   height: 8rem;
+  margin-top: 200px;
   border-radius: 50%;
 
   background: radial-gradient(
     circle at 30% 30%,
-    rgba(255, 255, 255, 0.7) 0%,
-    rgba(255, 255, 255, 0.2) 30%,
-    rgba(63, 134, 243, 0.1) 60%,
-    rgba(63, 134, 243, 0.05) 80%,
+    rgba(255, 255, 255, 0.85) 0%,
+    rgba(255, 255, 255, 0.5) 30%,
+    rgba(63, 134, 243, 0.15) 60%,
+    rgba(63, 134, 243, 0.1) 80%,
     transparent 100%
   );
 
@@ -22,13 +23,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: rgb(0, 0, 0);
-  font-size: 1rem;
+  color: #000;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.7);
+  font-size: 1.3rem;
   font-weight: 600;
   cursor: pointer;
   user-select: none;
 
-  animation: float 5s ease-in-out infinite;
+  animation: float 4s ease-in-out infinite;
 }
 .bubble::after {
   content: "";
@@ -47,7 +49,7 @@
     transform: translateY(0);
   }
   50% {
-    transform: translateY(-8px);
+    transform: translateY(-15px);
   }
 }
 
@@ -59,4 +61,8 @@
     transform: scale(1.3);
     opacity: 0;
   }
+}
+.bubble:hover {
+  box-shadow: inset -4px -4px 10px rgba(0, 0, 0, 0.3),
+    inset 4px 4px 8px rgba(255, 255, 255, 0.8), 0 12px 24px rgba(0, 0, 0, 0.2);
 }
