--- a/src/index.css
+++ b/src/index.css
@@ -31,43 +31,31 @@ body::before {
   width: 100%;
   height: 100%;
   background: radial-gradient(
-      2px 2px at 10% 20%,
+      3px 3px at 10% 20%,
+      rgba(255, 255, 255, 1),
+      transparent 60%
+    ),
+    radial-gradient(
+      2px 2px at 30% 10%,
       rgba(255, 255, 255, 0.9),
       transparent 50%
     ),
+    radial-gradient(4px 4px at 70% 30%, rgba(255, 255, 255, 1), transparent 70%),
     radial-gradient(
-      1px 1px at 30% 10%,
-      rgba(255, 255, 255, 0.7),
-      transparent 50%
-    ),
-    radial-gradient(
-      3px 3px at 70% 30%,
+      2px 2px at 90% 50%,
       rgba(255, 255, 255, 0.8),
       transparent 50%
     ),
+    radial-gradient(3px 3px at 20% 80%, rgba(255, 255, 255, 1), transparent 60%),
     radial-gradient(
-      1px 1px at 90% 50%,
-      rgba(255, 255, 255, 0.6),
-      transparent 50%
-    ),
-    radial-gradient(
-      2px 2px at 20% 80%,
+      2px 2px at 50% 90%,
       rgba(255, 255, 255, 0.9),
       transparent 50%
     ),
+    radial-gradient(4px 4px at 80% 70%, rgba(255, 255, 255, 1), transparent 70%),
     radial-gradient(
-      1px 1px at 50% 90%,
-      rgba(255, 255, 255, 0.7),
-      transparent 50%
-    ),
-    radial-gradient(
-      2px 2px at 80% 70%,
+      2px 2px at 40% 60%,
       rgba(255, 255, 255, 0.8),
-      transparent 50%
-    ),
-    radial-gradient(
-      1px 1px at 40% 60%,
-      rgba(255, 255, 255, 0.5),
       transparent 50%
     );
   background-size: 300px 300px;
