--- a/src/pages/Skills/skills.css
+++ b/src/pages/Skills/skills.css
@@ -18,6 +18,7 @@
 .icons:hover {
   transform: scale(1.1);
   filter: drop-shadow(0 0 20px rgba(235, 166, 63, 0.5));
+  transform: translateY(-5px);
 }
 
 .skills-title {
