--- a/src/components/Bubble/bubble.css
+++ b/src/components/Bubble/bubble.css
@@ -62,6 +62,5 @@
   }
 }
 .bubble:hover {
-  box-shadow: inset -4px -4px 10px rgba(0, 0, 0, 0.3),
-    inset 4px 4px 8px rgba(255, 255, 255, 0.8), 0 12px 24px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
 }
