move project images to public and reference src

--- a/src/pages/Experience/experience.css
+++ b/src/pages/Experience/experience.css
@@ -35,7 +35,7 @@
 }
 
 .work-duties {
-  color: #eba63f;
+  color: white;
   font-size: clamp(1rem, 2vw, 1.5rem);
   font-weight: 400;
   line-height: 1.6;
