start media queries for main page

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,14 @@ html,
   font-family: "Quicksand", sans-serif;
 }
 
+html,
+body,
+#root .app-container {
+  position: relative;
+  width: 100vw;
+  height: 100%;
+}
+
 body {
   font-family: "Poppins", sans-serif;
   background: linear-gradient(
@@ -21,6 +29,47 @@ body {
   background-size: 400% 400%;
   animation: gradientShift 15s ease infinite;
   overflow-x: hidden;
+}
+
+.bubbles-container::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(
+      3px 3px at 10% 20%,
+      rgba(255, 255, 255, 1),
+      transparent 60%
+    ),
+    radial-gradient(
+      2px 2px at 30% 10%,
+      rgba(255, 255, 255, 0.9),
+      transparent 50%
+    ),
+    radial-gradient(4px 4px at 70% 30%, rgba(255, 255, 255, 1), transparent 70%),
+    radial-gradient(
+      2px 2px at 90% 50%,
+      rgba(255, 255, 255, 0.8),
+      transparent 50%
+    ),
+    radial-gradient(3px 3px at 20% 80%, rgba(255, 255, 255, 1), transparent 60%),
+    radial-gradient(
+      2px 2px at 50% 90%,
+      rgba(255, 255, 255, 0.9),
+      transparent 50%
+    ),
+    radial-gradient(4px 4px at 80% 70%, rgba(255, 255, 255, 1), transparent 70%),
+    radial-gradient(
+      2px 2px at 40% 60%,
+      rgba(255, 255, 255, 0.8),
+      transparent 50%
+    );
+  background-size: 300px 300px;
+  animation: sparkleMove 8s linear infinite;
+  pointer-events: none;
+  z-index: 0;
 }
 
 body::before {
@@ -84,6 +133,17 @@ body::before {
   position: relative;
 }
 
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 @keyframes gradientShift {
   0%,
   100% {
@@ -117,19 +177,51 @@ body::before {
   }
 }
 
-html,
-body,
-#root .app-container {
-  position: relative;
-  width: 100vw;
-  height: 100%;
-}
-
 .title-container {
   position: absolute;
   top: 2rem;
   width: 100%;
   display: flex;
   justify-content: center;
-  pointer-events: none;
+}
+
+@media (min-width: 1023px) and (max-width: 1920px) and (max-height: 1400px) {
+  .bubbles-container {
+    padding-top: 10rem;
+  }
+  .title-container {
+    top: 1rem;
+  }
+}
+
+@media (min-width: 340px) and (max-width: 415px) {
+  .app-container {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+  }
+
+  .bubbles-container {
+    display: grid;
+    margin-top: 170px;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 6rem;
+    background: transparent;
+    justify-items: center;
+    width: 100%;
+    height: 100%;
+    align-content: center;
+  }
+  .bubbles-container > *:nth-child(5) {
+    grid-column: 1 / -1;
+    justify-self: center;
+  }
+
+  .bubbles-container .bubble {
+    max-width: 100px;
+    max-height: 100px;
+  }
 }
