--- a/src/index.css
+++ b/src/index.css
@@ -196,32 +196,98 @@ body::before {
 
 @media (min-width: 340px) and (max-width: 415px) {
   .app-container {
-    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 1rem;
   }
 
   .bubbles-container {
     display: grid;
-    margin-top: 170px;
+    margin-top: 25px;
+    column-gap: 100px;
+    row-gap: 0px;
     grid-template-columns: 1fr 1fr;
-    row-gap: 8rem;
     background: transparent;
     justify-items: center;
-    width: 100%;
-    height: 100%;
     align-content: center;
-  }
-  .bubbles-container > *:nth-child(5) {
-    grid-column: 1 / -1;
-    justify-self: center;
   }
 
   .bubbles-container .bubble {
     max-width: 100px;
     max-height: 100px;
+  }
+}
+
+@media (min-width: 416px) and (max-width: 767px) {
+  .app-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .bubbles-container p {
+    font-size: 1.3rem;
+  }
+
+  .bubbles-container {
+    display: grid;
+    margin-top: 0px;
+    column-gap: 100px;
+    row-gap: 0px;
+    grid-template-columns: 1fr 1fr;
+    background: transparent;
+    justify-items: center;
+    align-content: center;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 839px) {
+  .app-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .bubbles-container p {
+    font-size: 1.3rem;
+  }
+
+  .bubbles-container {
+    display: grid;
+    margin-bottom: 100px;
+    column-gap: 300px;
+    row-gap: 10px;
+    grid-template-columns: 1fr 1fr;
+    background: transparent;
+    justify-items: center;
+    align-content: center;
+  }
+}
+
+@media (min-width: 840px) and (max-width: 1022px) {
+  .app-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .bubbles-container {
+    display: grid;
+    margin-top: 100px;
+    column-gap: 260px;
+    row-gap: 0px;
+    transform: scale(1.23);
+    grid-template-columns: 1fr 1fr;
+    background: transparent;
+    justify-items: center;
+    align-content: center;
+  }
+
+  .bubbles-container p {
+    font-size: 1.4rem;
   }
 }
